# Gelatin

./: .gitattributes  .gitignore  .install.json  .travis.yml  AUTHORS  COPYING  INSTALL  Makefile  README  README.md  TODO  gel  mkapidoc.py  pyproject.toml  requirements.txt  setup.py  version.sh
.github/workflows/: publish.yml
Gelatin/: __init__.py  cli.py  util.py  version.py
Gelatin/compiler/: Context.py  Function.py  Grammar.py  MatchFieldList.py  MatchList.py  MatchStatement.py  Number.py  Regex.py  SkipStatement.py  String.py  SyntaxCompiler.py  Token.py  WhenStatement.py  __init__.py
Gelatin/generator/: Builder.py  Dummy.py  Json.py  Xml.py  Yaml.py  __init__.py
Gelatin/parser/: Dedent.py  Indent.py  Newline.py  Parser.py  Token.py  __init__.py  syntax.ebnf  util.py
debian/: changelog  control  copyright  gel.1  gelatin.manpages  rules  watch
demo/csv/: input1.txt  output1.json  output1.xml  output1.yaml
demo/linesplit/: input1.txt  output1.json  output1.xml  output1.yaml  syntax.gel
demo/simple/: output1.json  output1.yaml
demo/tria/: input1.txt  output1.json  output1.xml  output1.yaml  syntax.gel
doc/: Makefile  contact.tex  gelatin.en.tex  gelatin.tex  mkapidoc.py
docs/: Gelatin.compiler.rst  Gelatin.generator-module.html  Gelatin.generator.Builder-module.html  Gelatin.generator.Builder.Builder-class.html  Gelatin.generator.Dummy'-module.html  Gelatin.generator.Dummy'.Dummy-class.html  Gelatin.generator.Json'-module.html  Gelatin.generator.Json'.Json-class.html  Gelatin.generator.Json'.Node-class.html  Gelatin.generator.Xml'-module.html  Gelatin.generator.Xml'.Xml-class.html  Gelatin.generator.Yaml'-module.html  Gelatin.generator.Yaml'.Yaml-class.html  Gelatin.generator.rst  Gelatin.parser.rst  Gelatin.rst  Gelatin.util-module.html  Gelatin.util.rst  Gelatin.version-module.html  Makefile  advanced.rst  api-objects.txt  api.rst  class-tree.html  conf.py  help.html  identifier-index.html  index.html  index.rst  module-tree.html  modules.rst  quick.rst  redirect.html  syntax.rst
scripts/: gel
src/Gelatin/: util.py
src/Gelatin/compiler/: Context.py  Function.py  Grammar.py  MatchFieldList.py  MatchList.py  MatchStatement.py  Number.py  Regex.py  String.py  SyntaxCompiler.py  Token.py  __init__.py
src/Gelatin/generator/: Builder.py  Dummy.py  Json.py  JsonBuilder.py  Xml.py  XmlBuilder.py  Yaml.py  __init__.py
src/Gelatin/parser/: Dedent.py  Newline.py  Parser.py  syntax.ebnf  util.py
syntax/csv/: syntax.gel
syntax/ios/: input1.txt  syntax.gel
syntax/ios/execute-on_standby_show_gsr/: syntax.gel
syntax/ios/show_running_config/: input1.txt  syntax.gel
syntax/ios/show_version/: syntax.gel
syntax/ios_xr/: syntax.gel
syntax/ios_xr/show_install_active/: syntax.gel
syntax/ios_xr/show_running_config/: syntax.gel
syntax/ios_xr/show_version/: syntax.gel
syntax/simple/: input1.txt  syntax.gel
syntax/tria/: input.txt  input1.txt  syntax.gel
tests/: __init__.py  demoTest.py  demo_test.py  run_suite.py
tests/demo/csv/: output1.json  output1.yaml  syntax.gel
tests/demo/linesplit/: input1.txt  output1.json  output1.yaml
tests/demo/simple/: output1.json  output1.xml  output1.yaml  syntax.gel
tests/demo/tria/: output1.xml  output1.yaml
